--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO1V6pVs4IqFDyBnuii0W0W",
+      "authorship_tag": "ABX9TyPp0gGQVgG8SJl16i6IC9X+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,12 +95,12 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "5dbd5a47-cd69-4b15-b1d0-39313dc29393",
+        "outputId": "25337899-fae4-4e50-d39e-8550ab0df941",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -144,7 +144,7 @@
       "metadata": {
         "id": "TUEV99bdogt_"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -179,7 +179,7 @@
       "metadata": {
         "id": "7i8oVtQPpATN"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -208,7 +208,7 @@
       "metadata": {
         "id": "6c8vMI5Kpn3Z"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -218,13 +218,13 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "0c571781-32fd-4a95-822a-250354720ce5",
+        "outputId": "f0da950f-4624-456e-e95e-f8370230a6b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
         }
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -281,7 +281,7 @@
       "metadata": {
         "id": "x-rPHa6LRWuq"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -399,7 +399,7 @@
       "metadata": {
         "id": "WeoEaGC9Tzxd"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -412,12 +412,12 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "ccd5284f-4a69-49c7-dda5-68b4982cafec",
+        "outputId": "636d2fd2-a365-42d3-cb21-08499b33e9de",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,12 +438,13 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "39d4bf28-0578-49bd-a957-6da04d85ff9b",
+        "outputId": "ba928947-f469-409a-b71f-1b8a25bb68f8",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,7 +490,7 @@
       "metadata": {
         "id": "PRM1ZoHryMyF"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -502,12 +503,12 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "de34a80e-30d0-4902-b34a-8202ad48ed38",
+        "outputId": "b6770c8c-7203-4e44-9e31-c3d0833c0884",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,12 +538,13 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "25cca110-6eb4-4f3f-e523-bb287f1afaa9",
+        "outputId": "ee03203b-903e-47b1-d405-d1d4d9e5b5fb",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -629,7 +631,7 @@
       "metadata": {
         "id": "0bpgUYQq-_EB"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -642,12 +644,12 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "421abd9e-89e9-4882-b4fb-604327707d20",
+        "outputId": "0dcf39aa-096b-4680-a05e-fa93d9f63fde",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -688,12 +690,12 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "8145f6d6-ec4f-4a8b-e5d3-e7ac3dbdd367",
+        "outputId": "50506967-e113-40a4-d3d5-7b8951829390",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -714,12 +716,13 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "d2f83eb9-c8a2-4f50-b3a3-7e16976df910",
+        "outputId": "4054b9fc-78f0-49c3-914b-59270177dbd8",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -772,12 +775,12 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "726803d4-999c-4f72-cff5-d2c51d0ae4de",
+        "outputId": "710a00d8-bc68-49e6-d394-42cadb4797b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,12 +939,12 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "981dfbdc-69d9-4017-86e6-153e404c1b2c",
+        "outputId": "4c349416-4f30-48b9-8fe3-c023a98cc0a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -986,12 +989,12 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "2568beaa-165e-4c7d-b3c3-e428764e04c8",
+        "outputId": "2e9a9f8a-f413-4f93-feea-c7fac7ebfdb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1046,12 +1049,12 @@
       ],
       "metadata": {
         "id": "7KGimSc7i5mq",
-        "outputId": "aacd64c2-b776-4edc-a50d-2dc11064cf09",
+        "outputId": "67ce7c24-b01e-4fb9-b019-734b2d3dcdbf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1092,12 +1095,12 @@
       ],
       "metadata": {
         "id": "kqzsESKSjLye",
-        "outputId": "27c151f5-4f3b-41bb-83ce-f8093e6426c2",
+        "outputId": "99910f26-fd77-4cb4-c847-faecce8c0e42",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1140,12 +1143,12 @@
       ],
       "metadata": {
         "id": "BLlWQOoUmB_c",
-        "outputId": "23b202bb-16e4-4b79-e0bb-1efbaef54a71",
+        "outputId": "a85c4d52-b565-470d-e106-7c8c05760558",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1180,12 +1183,12 @@
       ],
       "metadata": {
         "id": "jYFkQVuemgYv",
-        "outputId": "1d7df7fd-2117-4bfd-b4b7-28a8506e1c5d",
+        "outputId": "3cbd87e9-2443-4564-b291-29e5a96ef721",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1213,12 +1216,12 @@
       ],
       "metadata": {
         "id": "4MeIh-J5m9cr",
-        "outputId": "48fe5303-3fd0-4e71-938f-8d04d4945b55",
+        "outputId": "e13e34b8-2923-4147-d6e0-db20984a5a01",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1273,7 +1276,7 @@
       "metadata": {
         "id": "p8DLmSIcp_gV"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -1310,12 +1313,12 @@
       ],
       "metadata": {
         "id": "v55nZdz7sBja",
-        "outputId": "fb7e3b7e-c155-4134-b938-04cf7f0263c6",
+        "outputId": "19bdf755-bd18-433e-ed04-a907485a5e82",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1347,7 +1350,7 @@
       "metadata": {
         "id": "4fb9Khd2qq2e"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -1368,12 +1371,12 @@
       ],
       "metadata": {
         "id": "QbaYltajs1KL",
-        "outputId": "18c44576-5fce-4ddb-a269-f093aa2c8b5c",
+        "outputId": "41b39500-dd43-4f51-e07d-0dffe98e9747",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,12 +1435,12 @@
       ],
       "metadata": {
         "id": "ahWYmlyktqJt",
-        "outputId": "0631e622-fad9-48fc-d86d-2fc2bb45409e",
+        "outputId": "a84bdcfc-e63a-41de-f0c1-23ba84625dd9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1490,7 +1493,7 @@
       "metadata": {
         "id": "dxrqtJh5y02C"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -1506,7 +1509,7 @@
       "metadata": {
         "id": "HBJiahVm1Y_-"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1516,13 +1519,13 @@
       ],
       "metadata": {
         "id": "6mQoC-B7_ziz",
-        "outputId": "d29f2cc3-8d55-49ff-be8a-c3bd3ff89150",
+        "outputId": "bdd36c64-bfda-487b-822d-691655b92b5a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
         }
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1544,12 +1547,12 @@
       ],
       "metadata": {
         "id": "j8OYa5xf11co",
-        "outputId": "5b70fd4f-7a36-45bc-b9b5-bea139673c3e",
+        "outputId": "fcb85721-77fc-4cb7-fe7c-f440aafc0cd5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -1594,12 +1597,12 @@
       ],
       "metadata": {
         "id": "g5bWQuCLAVwZ",
-        "outputId": "c728841d-37b1-41f6-d2ef-fab21cc68734",
+        "outputId": "11bb6ee4-556c-4fc9-fce6-466e8f27c297",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1637,12 +1640,12 @@
       ],
       "metadata": {
         "id": "JBh62Ri6BcF7",
-        "outputId": "12d52447-cf9d-4f1d-f647-f9aa9eb681ab",
+        "outputId": "169d17e5-9998-4dad-ed9c-def12a10ac80",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1716,12 +1719,12 @@
       ],
       "metadata": {
         "id": "HI8ql8YuDfrs",
-        "outputId": "72d3907d-5238-4b1f-e26f-90c621ccc3e8",
+        "outputId": "e17963af-04ef-409c-b94d-31541fade2bd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1785,7 +1788,7 @@
       "metadata": {
         "id": "e1j1UHc1jkfg"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1804,13 +1807,13 @@
       ],
       "metadata": {
         "id": "mkVBWlp8kGmg",
-        "outputId": "34800bce-4c32-4000-9b4e-8a4faa4c4375",
+        "outputId": "c0b9794c-270e-49d9-8105-7d078d71eb98",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 257
         }
       },
-      "execution_count": null,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1845,13 +1848,13 @@
       ],
       "metadata": {
         "id": "T_1peUgEmO35",
-        "outputId": "0c27c9e8-3f0b-4d3d-8f5f-ab334acda784",
+        "outputId": "0cecaf63-6d72-4190-aa37-6d6808854f6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145
         }
       },
-      "execution_count": null,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1901,13 +1904,13 @@
       ],
       "metadata": {
         "id": "rOCH0UJ-nfoN",
-        "outputId": "d78a0bdf-258e-4541-c2f4-ffeb85199277",
+        "outputId": "003bc511-d824-42f8-ab46-d6b69c824600",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 145
+          "height": 0
         }
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1942,12 +1945,12 @@
       ],
       "metadata": {
         "id": "oKc_UxIQoKQH",
-        "outputId": "5d02b522-423e-4c69-97e1-d87ad984faec",
+        "outputId": "309d37f5-9801-4c0f-d5ac-0f614d3d96b1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1958,7 +1961,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 42
         }
       ]
     },
@@ -2013,7 +2016,7 @@
       "metadata": {
         "id": "FXzbEY-_0-cX"
       },
-      "execution_count": null,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -2036,7 +2039,14 @@
         "\n",
         "$$\n",
         "\\Large \\text{TPR} = \\frac{\\text{TP}}{\\text{TP + FN}} \\ \\ \\  \\text{FPR} = \\frac{\\text{FP}}{\\text{FP + TN}}\n",
-        "$$"
+        "$$\n",
+        "\n",
+        "The true positive rate tells you, from all points you know to be positive, how many\n",
+        "your model got right.\n",
+        "\n",
+        "There is yet another name for this metric: recall.\n",
+        "\n",
+        "From all the positive examples, how many does your model recall?"
       ],
       "metadata": {
         "id": "SxLjd6iK2BRE"
