--- a/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
+++ b/deep-learning-with-pytorch-step-by-step/05_simple_classification_problem.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPp0gGQVgG8SJl16i6IC9X+",
+      "authorship_tag": "ABX9TyMrRyKGPeieiD4go0i+66NR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
       ],
       "metadata": {
         "id": "pgGfHWV5oZqU",
-        "outputId": "25337899-fae4-4e50-d39e-8550ab0df941",
+        "outputId": "96953110-2c86-48fd-f2b6-482c5de3f0cb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -118,10 +118,37 @@
         "!wget https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/trainer.py"
       ],
       "metadata": {
-        "id": "W84boD_8VMQV"
+        "id": "W84boD_8VMQV",
+        "outputId": "66007fe3-cf51-4b85-e16b-ec4ebfdd687f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2022-12-02 04:04:07--  https://github.com/rahiakela/deep-learning-research-and-practice/raw/main/deep-learning-with-pytorch-step-by-step/networks/trainer.py\n",
+            "Resolving github.com (github.com)... 140.82.114.3\n",
+            "Connecting to github.com (github.com)|140.82.114.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/trainer.py [following]\n",
+            "--2022-12-02 04:04:08--  https://raw.githubusercontent.com/rahiakela/deep-learning-research-and-practice/main/deep-learning-with-pytorch-step-by-step/networks/trainer.py\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.111.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 8611 (8.4K) [text/plain]\n",
+            "Saving to: ‘trainer.py’\n",
+            "\n",
+            "trainer.py          100%[===================>]   8.41K  --.-KB/s    in 0s      \n",
+            "\n",
+            "2022-12-02 04:04:08 (74.5 MB/s) - ‘trainer.py’ saved [8611/8611]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -218,7 +245,7 @@
       ],
       "metadata": {
         "id": "4VNwxL8XaoO7",
-        "outputId": "f0da950f-4624-456e-e95e-f8370230a6b0",
+        "outputId": "cd2afdf5-04ee-463c-86b1-6b46f5e2ad46",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 381
@@ -412,7 +439,7 @@
       ],
       "metadata": {
         "id": "LO7taUG6r_44",
-        "outputId": "636d2fd2-a365-42d3-cb21-08499b33e9de",
+        "outputId": "aba71bba-aeda-481d-8787-708f161a3ed1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -438,7 +465,7 @@
       ],
       "metadata": {
         "id": "uc8zx220sSBT",
-        "outputId": "ba928947-f469-409a-b71f-1b8a25bb68f8",
+        "outputId": "c7ff8709-4928-4656-a5be-8fa6f1ea531e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -503,7 +530,7 @@
       ],
       "metadata": {
         "id": "8637euDzyYXl",
-        "outputId": "b6770c8c-7203-4e44-9e31-c3d0833c0884",
+        "outputId": "0f5e6c34-50e2-4e4e-ec84-ac9eb510271a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -538,7 +565,7 @@
       ],
       "metadata": {
         "id": "6BXgqRdLzydy",
-        "outputId": "ee03203b-903e-47b1-d405-d1d4d9e5b5fb",
+        "outputId": "7996844f-5d13-4ea5-bcad-267e3eb6ff1a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -644,7 +671,7 @@
       ],
       "metadata": {
         "id": "IxTcSuLg_K-t",
-        "outputId": "0dcf39aa-096b-4680-a05e-fa93d9f63fde",
+        "outputId": "cb1f5531-bd0f-45a6-b323-35eb814839c1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -690,7 +717,7 @@
       ],
       "metadata": {
         "id": "yRrjgkAJAUX-",
-        "outputId": "50506967-e113-40a4-d3d5-7b8951829390",
+        "outputId": "5711f323-2e7c-4469-90ce-2b65a014f83a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -716,7 +743,7 @@
       ],
       "metadata": {
         "id": "VTKOWXVZA5dG",
-        "outputId": "4054b9fc-78f0-49c3-914b-59270177dbd8",
+        "outputId": "e953f546-c93e-4c5c-a1da-9bf0721b7ecc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -775,7 +802,7 @@
       ],
       "metadata": {
         "id": "fTXmjqiW7aB2",
-        "outputId": "710a00d8-bc68-49e6-d394-42cadb4797b7",
+        "outputId": "0ac69988-3ce2-420e-e70c-967e715370e4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -939,7 +966,7 @@
       ],
       "metadata": {
         "id": "KH8sBUKjZFuZ",
-        "outputId": "4c349416-4f30-48b9-8fe3-c023a98cc0a1",
+        "outputId": "f5c896b7-03d2-4add-ddeb-f662561eb577",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -989,7 +1016,7 @@
       ],
       "metadata": {
         "id": "ywuj3tIPb78E",
-        "outputId": "2e9a9f8a-f413-4f93-feea-c7fac7ebfdb6",
+        "outputId": "d94c21f8-5fbf-4811-ae6d-b9301242ac28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1049,7 +1076,7 @@
       ],
       "metadata": {
         "id": "7KGimSc7i5mq",
-        "outputId": "67ce7c24-b01e-4fb9-b019-734b2d3dcdbf",
+        "outputId": "c59d24c7-d695-4a17-a880-9c80c642e423",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1095,7 +1122,7 @@
       ],
       "metadata": {
         "id": "kqzsESKSjLye",
-        "outputId": "99910f26-fd77-4cb4-c847-faecce8c0e42",
+        "outputId": "59c71419-e1fe-4b34-94fd-91c7ff710706",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1143,7 +1170,7 @@
       ],
       "metadata": {
         "id": "BLlWQOoUmB_c",
-        "outputId": "a85c4d52-b565-470d-e106-7c8c05760558",
+        "outputId": "3c44111e-8245-495e-82f9-a3350d103a59",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1183,7 +1210,7 @@
       ],
       "metadata": {
         "id": "jYFkQVuemgYv",
-        "outputId": "3cbd87e9-2443-4564-b291-29e5a96ef721",
+        "outputId": "1ebc6be9-d855-47ee-9c82-11c7c19f61b2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1216,7 +1243,7 @@
       ],
       "metadata": {
         "id": "4MeIh-J5m9cr",
-        "outputId": "e13e34b8-2923-4147-d6e0-db20984a5a01",
+        "outputId": "6964471c-7b18-44c6-e5eb-aaa55ebd771a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1313,7 +1340,7 @@
       ],
       "metadata": {
         "id": "v55nZdz7sBja",
-        "outputId": "19bdf755-bd18-433e-ed04-a907485a5e82",
+        "outputId": "bfb6b90a-1c75-48db-f26b-e933e823cf43",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1371,7 +1398,7 @@
       ],
       "metadata": {
         "id": "QbaYltajs1KL",
-        "outputId": "41b39500-dd43-4f51-e07d-0dffe98e9747",
+        "outputId": "72fc8491-5de5-465f-e37f-d76e9af02ec4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1435,7 +1462,7 @@
       ],
       "metadata": {
         "id": "ahWYmlyktqJt",
-        "outputId": "a84bdcfc-e63a-41de-f0c1-23ba84625dd9",
+        "outputId": "61bb8c0b-4af9-4a4b-d020-a107e9f675e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1519,7 +1546,7 @@
       ],
       "metadata": {
         "id": "6mQoC-B7_ziz",
-        "outputId": "bdd36c64-bfda-487b-822d-691655b92b5a",
+        "outputId": "5e13e685-45bd-4a3b-82f0-8731d412f6e2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 289
@@ -1547,7 +1574,7 @@
       ],
       "metadata": {
         "id": "j8OYa5xf11co",
-        "outputId": "fcb85721-77fc-4cb7-fe7c-f440aafc0cd5",
+        "outputId": "7d53e9a4-17f5-4247-89c8-c1122215cc63",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1597,7 +1624,7 @@
       ],
       "metadata": {
         "id": "g5bWQuCLAVwZ",
-        "outputId": "11bb6ee4-556c-4fc9-fce6-466e8f27c297",
+        "outputId": "95d05d4b-ca90-4a27-c67c-7939c4a30dd2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1640,7 +1667,7 @@
       ],
       "metadata": {
         "id": "JBh62Ri6BcF7",
-        "outputId": "169d17e5-9998-4dad-ed9c-def12a10ac80",
+        "outputId": "bc8333f4-5bcf-4b72-8b86-fcdf82112acc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1719,7 +1746,7 @@
       ],
       "metadata": {
         "id": "HI8ql8YuDfrs",
-        "outputId": "e17963af-04ef-409c-b94d-31541fade2bd",
+        "outputId": "a4c0dc51-2173-4613-91dd-9038e72ef81e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1807,7 +1834,7 @@
       ],
       "metadata": {
         "id": "mkVBWlp8kGmg",
-        "outputId": "c0b9794c-270e-49d9-8105-7d078d71eb98",
+        "outputId": "00082a4a-7ee3-4cec-e22b-8ff685800a6d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 257
@@ -1848,7 +1875,7 @@
       ],
       "metadata": {
         "id": "T_1peUgEmO35",
-        "outputId": "0cecaf63-6d72-4190-aa37-6d6808854f6a",
+        "outputId": "63f4b0e0-89cb-432a-adf3-3b2ef886a662",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145
@@ -1904,7 +1931,7 @@
       ],
       "metadata": {
         "id": "rOCH0UJ-nfoN",
-        "outputId": "003bc511-d824-42f8-ab46-d6b69c824600",
+        "outputId": "9d262f89-9f93-436a-c567-8fff7e9e8f15",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 0
@@ -1945,7 +1972,7 @@
       ],
       "metadata": {
         "id": "oKc_UxIQoKQH",
-        "outputId": "309d37f5-9801-4c0f-d5ac-0f614d3d96b1",
+        "outputId": "6eda8ad5-abfa-45f5-c990-36149fb599f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2050,6 +2077,182 @@
       ],
       "metadata": {
         "id": "SxLjd6iK2BRE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def tpr_fpr(cm):\n",
+        "  tn, fp, fn, tp = split_cm(cm)\n",
+        "\n",
+        "  tpr = tp / (tp + fn)\n",
+        "  fpr = fp / (fp + tn)\n",
+        "  return tpr, fpr"
+      ],
+      "metadata": {
+        "id": "TM1RJPaKATm_"
+      },
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tpr_fpr(cm_thresh50)"
+      ],
+      "metadata": {
+        "id": "UMYJCq6HA3iY",
+        "outputId": "9d1bd0d5-5ace-4df3-a722-975a8cb2c543",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.9090909090909091, 0.2222222222222222)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 45
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Precision and Recall"
+      ],
+      "metadata": {
+        "id": "CgaEHCapBeup"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "$$\n",
+        "\\Large \\text{Recall} = \\frac{\\text{TP}}{\\text{TP + FN}} \\ \\ \\  \\text{Precision} = \\frac{\\text{TP}}{\\text{TP + FP}}\n",
+        "$$"
+      ],
+      "metadata": {
+        "id": "x9ROwX9WBg_5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def precision_recall(cm):\n",
+        "  tn, fp, fn, tp = split_cm(cm)\n",
+        "\n",
+        "  precision = tp / (tp + fp)\n",
+        "  recall = tp / (tp + fn)\n",
+        "  return precision, recall"
+      ],
+      "metadata": {
+        "id": "bOWVwKh-BgPf"
+      },
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "precision_recall(cm_thresh50)"
+      ],
+      "metadata": {
+        "id": "fgu0ddcqCUwX",
+        "outputId": "723810a4-5939-4a12-bd40-4d4bb551c00a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(0.8333333333333334, 0.9090909090909091)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 48
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Accuracy"
+      ],
+      "metadata": {
+        "id": "DI5YIMXuDJiF"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This is the simplest and most intuitive of them all: how many times your model got\n",
+        "it right, considering all data points.\n",
+        "\n",
+        "$$\n",
+        "\\Large \\text{Accuracy} = \\frac{\\text{TP+TN}}{\\text{TP+TN+FP+FN}}\n",
+        "$$\n",
+        "\n",
+        "If you have an imbalanced dataset, relying on accuracy can be\n",
+        "misleading."
+      ],
+      "metadata": {
+        "id": "PfcOpfPTDKu-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "tn, fp, fn, tp = split_cm(cm_thresh50)\n",
+        "\n",
+        "accuracy = (tp + tn) / (tp + tn + fp + fn)\n",
+        "\n",
+        "accuracy"
+      ],
+      "metadata": {
+        "id": "lvQO6cWWD5SJ",
+        "outputId": "ed254951-4be1-4ed4-e5a4-1db2bb441734",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.85"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###Metric Trade-offs"
+      ],
+      "metadata": {
+        "id": "VBO2Cyp-Ev1d"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "3VJlI_MAEyun"
       }
     }
   ]
