--- a/inside-deep-learing/08-object-detection/02_object_detection.ipynb
+++ b/inside-deep-learing/08-object-detection/02_object_detection.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMfax2SrXfndJScoWzjjWqP",
+      "authorship_tag": "ABX9TyNtReEdx8wxCxesM7hG8Mv9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -504,14 +504,39 @@
     {
       "cell_type": "code",
       "source": [
-        "# Trains the segmentation model\n",
-        "segmentation_results = train_network(segmentation_model, loss_func, train_seg_loader, epochs=10, device=device, val_loader=test_seg_loader)"
+        "# How many proposals $k$ should be generated? \n",
+        "# Every aspect ration will be one, and the process will be repeated for multiple image sizes \n",
+        "# To make this run faster, we are telling PyTorch to look for only square images that are 32 x 32 in size\n",
+        "anchor_generator = AnchorGenerator(sizes=((32), ), aspect_ratios=((1.0), )) \n",
+        "\n",
+        "# Tell PyTorch to use the final output of the backbone as the featuremap (['0']), \n",
+        "# use adaptive pooling down to a 7x7 grid (output_size=7)\n",
+        "roi_pooler = torchvision.ops.MultiScaleRoIAlign(featmap_names=[\"0\"], output_size=7, sampling_ratio=2)\n",
+        "\n",
+        "# Now we can create the FasterRCNN object. We give it the backbone network, number of classes, \n",
+        "# min & max size to process images at (we know all our images at 100 pixels), \n",
+        "# a mean and standard deviation to subtract from the images, and the anchor generation (RPN) and RoI objects\n",
+        "model = FasterRCNN(backbone, \n",
+        "                   num_classes=10,\n",
+        "                   image_mean=[0.5],\n",
+        "                   image_std=[0.229],\n",
+        "                   min_size=100,\n",
+        "                   max_size=100,\n",
+        "                   rpn_anchor_generator=anchor_generator,\n",
+        "                   box_roi_pool=roi_pooler)"
       ],
       "metadata": {
         "id": "gNok4WA6U2k1"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GBQpKWFm69eJ"
+      }
     },
     {
       "cell_type": "code",
